--- a/src/App.css
+++ b/src/App.css
@@ -36,23 +36,50 @@ main {
 
 .hero {
   width: 100vw;
-  height: 500px;
+  min-height: 300px;
+  padding: 50px 0;
+}
+
+.hero-desc {
+  margin: 2rem;
 }
 
 .buttons {
-
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
   width: 100vw;
-  height: 500px;
+  margin: 2rem 0;
+}
+
+.button {
+  background-color: rgb(256, 256, 256, .3);
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border: 2px solid #000000;
+  border-radius: 8px;
+}
+
+.button:hover {
+  background-color: rgb(256, 256, 256, .6);
 }
 
 .projects {
-
   width: 100vw;
-  height: 500px;
+  min-height: 300px;
+  padding: 50px 0;
 }
 
 .contact {
-
   width: 100vw;
-  height: 500px;
+  min-height: 300px;
+  padding: 50px 0;
 }
