--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -4,7 +4,7 @@
     background-color: rgb(255, 255, 255, .6);
     position: fixed;
     top: 0;
-    backdrop-filter: blur(10);
+    backdrop-filter: blur(10px);
 
     display: flex;
     flex-direction: row;
