Remove email from navbar

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -21,10 +21,10 @@
     padding-left: 40px;
 }
 
-.icon-a {
+.icon-link {
     position: relative;
     height: 2rem; 
- }
+}
 
 .icon {
     height: 100%;
