--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -8,10 +8,24 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
 
+.logo {
+    padding-left: 20px;
+    font-weight: bold;
+    font-size: large;
+    text-align: left;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
 .icons {
     display: flex;
     flex-direction: row;
@@ -30,7 +44,7 @@
     height: 100%;
 }
 
-.links {
+.nav-links {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
