Change name in navbar to link

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -17,6 +17,11 @@
     font-weight: bold;
     font-size: large;
     text-align: left;
+    text-decoration: none;
+}
+
+.logo:active, .logo:visited {
+    color: rgb(0, 0, 0);
 }
 
 .links {
