--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@ html, body {
 }
 
 .App {
-  text-align: center;
+  text-align: left;
+  height: 100%;
 }
 
 header {
@@ -23,57 +24,29 @@ header {
 }
 
 main {
-  margin-top: 100px;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+}
+
+.main-content {
+  padding: 100px 40px;
+  height: 100%;
   white-space: normal;
-  
+  max-width: 800px;
+  overflow:hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .hero {
-  width: 100vw;
+  width: 100%;
   min-height: 300px;
-  padding: 50px 0;
+  padding: 100px 0 0 0;
 }
 
 .hero-desc {
-  margin: 2rem;
-}
-
-.buttons {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 10px;
-  width: 100vw;
   margin: 2rem 0;
-}
-
-.button {
-  background-color: rgb(256, 256, 256, .3);
-  border: none;
-  color: rgb(0, 0, 0);
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border: 2px solid #000000;
-  border-radius: 8px;
-}
-
-.button:hover {
-  background-color: rgb(256, 256, 256, .6);
-}
-
-.projects {
-  width: 100vw;
-  min-height: 300px;
-  padding: 50px 0;
-}
-
-.contact {
-  width: 100vw;
-  min-height: 300px;
-  padding: 50px 0;
 }
