--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -1,3 +1,13 @@
+.hero {
+    width: 100%;
+    min-height: 300px;
+    padding: 100px 0 0 0;
+}
+  
+.hero-desc {
+    margin: 2rem 0;
+}
+
 .projects {
     width: 100%;
     min-height: 100px;
@@ -35,4 +45,41 @@
     align-items: flex-start;
     gap: 10px;
     width: 100%;
+}
+
+
+/* 
+TODO --->
+*/
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+
+  
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+
 }
