Comment navbar responsivity

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,6 @@
+
+/* Normal devices (width 600px and up) */
+
 .navbar {
     width: 100vw;
     height: 60px;
@@ -78,13 +81,7 @@
     margin: 0;
 }
 
-
-/* 
-TODO --->
-*/
-
-
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices (width 600px and down) */
 @media only screen and (max-width: 600px) {
 
     .nav-logo-div, .nav-separator {
@@ -107,28 +104,3 @@ TODO --->
     }
   
 }
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-
-}
-
