--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,93 @@ main {
   padding: 100px 40px;
   height: 100%;
   white-space: normal;
-  max-width: 800px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+
+
+/* Extra small devices (600px and down) */
+@media only screen and (max-width: 600px) {
+
+  h1 {
+    font-size: 42px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+  
+}
+
+/* Small devices (600px and up) */
+@media only screen and (min-width: 600px) {
+
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 36px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+  .main-content {
+    max-width: 700px;
+  }
+}
+
+/* Large devices (laptops/desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 48px;
+  }
+
+  p {
+    font-size: 24px;
+  }
+
+  .main-content {
+    max-width: 800px;
+  }
+
+}
+
+/* Very large devices (1600px and up) */
+@media only screen and (min-width: 1600px) {
+
+  .main-content {
+    max-width: 50vw;
+  }
+
+}
+
+/* Extra large devices (2600px and up) */
+@media only screen and (min-width: 2600px) {
+
+  h1 {
+    font-size: 90px;
+  }
+
+  h2 {
+    font-size: 60px;
+  }
+
+  p {
+    font-size: 48px;
+  }
+  
 }
