--- a/src/components/capyCard.css
+++ b/src/components/capyCard.css
@@ -14,6 +14,10 @@
     height: 100%;
     position: absolute;
     backface-visibility: hidden;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
 }
 
 .frontside {
