Improve capygame responsivity

--- a/src/components/capyCard.css
+++ b/src/components/capyCard.css
@@ -1,7 +1,7 @@
 
 .capy-card {
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     position: relative;
     transform: scale(1);
     transform-style: preserve-3d;
@@ -31,4 +31,45 @@
 
 .capy-card.flipped {
     transform: rotateY(180deg);
+}
+
+
+/* Extra small devices (800px and down) */
+@media only screen and (max-width: 800px) {
+
+    .capy-card {
+        height: 20vw;
+        width: 20vw;
+    }
+
+}
+  
+/* Small devices (800px and up) */
+@media only screen and (min-width: 800px) {
+
+    .capy-card {
+        height: 150px;
+        width: 150px;
+    }
+
+}
+
+/* Large devices (laptops/desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+    .capy-card {
+        height: 200px;
+        width: 200px;
+    }
+
+}
+
+/* Extra large devices (2600px and up) */
+@media only screen and (min-width: 2600px) {
+
+    .capy-card {
+        height: 10vw;
+        width: 10vw;
+    }
+
 }
