--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -3,7 +3,11 @@
     min-height: 300px;
     padding: 100px 0 0 0;
 }
-  
+
+.hero-h1 {
+    margin-bottom: 0;
+}
+
 .hero-desc {
     margin: 2rem 0;
 }
